--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
     http-equiv="X-UA-Compatible" ontent="ie=edge">
-  <title>交通状況可視化マップ</title>
+  <title>くまもと事故マップ</title>
   <!-- CDN Bootstrapを読み込む -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -169,7 +169,22 @@
                     <button type="button" class="btn btn-light btn-sm" id="show-button-sm">表示する</button>
                   </div>
                 </div>
+                <div class="comments_btn p-2 pe-3 pt-3 border-bottom border-light-subtle">
 
+                  <div class="d-flex flex-wrap">
+
+                    <div class="layer-container-comments" style="width: 70%;">
+                      <label for="" style="font-size: 15px; margin-left:8px;">コメントの付いたマーカーのみ</label>
+                    </div>
+                    <div class="layer-container-comments" style="width: 30%;">
+                      <div class=" toggle" style="float: left;">
+                        <input type="checkbox" name="check" />
+                      </div>
+                    </div>
+
+                  </div>
+
+                </div>
               </div>
 
               <div class="scroll-content" id="layer-control">
@@ -651,7 +666,22 @@
               <button type="button" class="btn btn-dark btn-sm" id="show-button">表示する</button>
             </div>
           </div>
+          <div class="comments_btn p-2 pe-3 pt-3 border-bottom border-light-subtle">
 
+            <div class="d-flex flex-wrap">
+
+              <div class="layer-container-comments" style="width: 70%;">
+                <label for="" style="font-size: 15px; margin-left:5px;">コメントの付いたマーカーのみ</label>
+              </div>
+              <div class="layer-container-comments" style="width: 30%;">
+                <div class=" toggle" style="float: right;">
+                  <input type="checkbox" name="check" />
+                </div>
+              </div>
+
+            </div>
+
+          </div>
         </div>
 
         <div class="scroll-content" id="layer-control">
