--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
     http-equiv="X-UA-Compatible" ontent="ie=edge">
-  <title>交通状況可視化マップ</title>
+  <title>くまもと事故マップ</title>
 
   <!-- CDN Bootstrapを読み込む -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
